force-app/main/default/objects/ucinn_ascendv2__Related_Organization__c/ucinn_ascendv2__Related_Organization__c.object-meta.xml
<CustomObject>
    <description>A connection between two organizations.</description>
    <label>Related Organization</label>
    <nameField>
        <label>Related Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>