force-app/main/default/objects/ucinn_ascendv2__Related_Organization__c/fields/Apply_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Apply_Soft_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Soft Credit</label>
    <type>Checkbox</type>
</CustomField>