force-app/main/default/objects/ucinn_ascendv2__Related_Organization__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Organizations</relationshipLabel>
    <relationshipName>Related_Organizations_Account</relationshipName>
    <type>Lookup</type>
</CustomField>