force-app/main/default/objects/ucinn_ascendv2__Related_Organization__c/fields/ucinn_ascendv2__Reciprocal_Related_Organization__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reciprocal_Related_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to reciprocal. Contains the opposite related org object with the roles switched.</description>
    <inlineHelpText>Lookup to reciprocal. Contains the opposite related org object with the roles switched.</inlineHelpText>
    <label>Reciprocal Related Organization</label>
    <referenceTo>ucinn_ascendv2__Related_Organization__c</referenceTo>
    <relationshipLabel>Related Organizations</relationshipLabel>
    <relationshipName>Related_Orgs_Reciprocal_Related_Org</relationshipName>
    <type>Lookup</type>
</CustomField>