force-app/main/default/objects/ucinn_ascendv2__Related_Organization__c/fields/ucinn_ascendv2__Related_Organization_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Organization_Auto_Number__c</fullName>
    <displayFormat>RO-{0000000}</displayFormat>
    <label>Related Organization Auto Number</label>
    <type>AutoNumber</type>
</CustomField>